--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3968,7 +3968,7 @@
 			}
 
 			.tiles article.style2 > .image:before {
-				background-color: #7ecaf6;
+				background-color: #A8A8A8;
 			}
 
 			.tiles article.style3 > .image:before {
